# ink2midi

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.sh
configs/: base.yaml
configs/detection/: yolov8_deepscores.yaml  yolov8_muscima.yaml
configs/gnn/: gat_relationship.yaml
configs/pipeline/: inference.yaml
data/splits/: deepscores_splits.json  muscima_splits.json
paper/: README.md  ink2midi_ieee.tex
scripts/: download_data.py  evaluate.py  evaluate_gnn.py  evaluate_midi.py  prepare_data.py  run_everything.sh  run_full_evaluation.sh  run_inference.py  train_detector.py  train_gnn.py
src/omr/data/: augmentations.py  coco_converter.py  datasets.py  deepscores_parser.py  download.py  graph_builder.py  muscima_parser.py  yolo_converter.py
src/omr/detection/: postprocess.py  visualize.py  yolo_trainer.py
src/omr/evaluation/: detection_metrics.py  graph_metrics.py  midi_metrics.py  visualization.py
src/omr/pipeline/: inference.py
src/omr/relationship/: gat_model.py  gcn_model.py  graph_dataset.py  inference.py  trainer.py
src/omr/sequencer/: midi_writer.py  pitch_resolver.py  rhythm_resolver.py  semantic_builder.py  staff_analysis.py
src/omr/utils/: config.py  device.py  logging.py  reproducibility.py
tests/: conftest.py  test_gat_model.py  test_graph_builder.py  test_midi_writer.py  test_pitch_resolver.py  test_postprocess.py  test_rhythm_resolver.py  test_semantic_builder.py  test_staff_analysis.py  test_yolo_converter.py
