[project]
name = "omr-handwritten"
version = "0.1.0"
description = "Deep Learning-Based Optical Music Recognition: From Handwritten Sheet Music to Playable MIDI"
requires-python = ">=3.11,<3.14"
license = {text = "MIT"}
authors = [{name = "Ojasvi Poonia"}]

dependencies = [
    # Core ML
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "torchaudio>=2.2.0",

    # Object Detection
    "ultralytics>=8.3.0",

    # Graph Neural Networks
    "torch-geometric>=2.6.0",

    # Music / MIDI
    "music21>=9.0.0",
    "mido>=1.3.0",
    "pretty_midi>=0.2.10",

    # OMR Data
    "muscima>=0.10.0",
    "omrdatasettools>=1.0.0",

    # Configuration
    "omegaconf>=2.3.0",
    "pyyaml>=6.0",

    # Image Processing
    "opencv-python-headless>=4.9.0",
    "Pillow>=10.0.0",
    "scikit-image>=0.22.0",

    # Data / Metrics
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scipy>=1.12.0",
    "scikit-learn>=1.4.0",

    # Visualization
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",

    # Experiment Tracking
    "wandb>=0.16.0",
    "tensorboard>=2.16.0",

    # Misc
    "tqdm>=4.66.0",
    "rich>=13.7.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "pre-commit>=3.6.0",
    "jupyter>=1.0.0",
    "ipywidgets>=8.1.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
